--- a/src/exp-sources-component.css
+++ b/src/exp-sources-component.css
@@ -3,43 +3,74 @@
   margin: 0;
   padding: 2rem;
   text-align: center;
-  flex:1;
+  flex: 1;
 }
 
-.multiplicative-grid-wrapper {
-  background-color: hsl(180, 25%, 25%);
+.exp-source-wrapper {
+  background-color: var(--normal);
+  color:var(--text);
   width: 100%;
 }
 
-.multiplicative-grid-wrapper .row {
+.exp-source-wrapper .row {
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
-  flex-basis: auto;
   padding: 0.1em 1em;
+
+  &>:nth-child(1) {
+    font-size: 1.25em;
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  &>:nth-child(2) {
+    font-size: 1.1em;
+    flex: 1.5;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+  }
+
+  & .range-wrapper,
+  & .input-wrapper{
+    font-size: 1.1em;
+    gap: 0.5em;
+
+    &>:nth-child(1) {
+      flex: 1;
+    }
+    &>:nth-child(2) {
+      flex: 2;
+      height: 24px;
+    }
+  }
+
+  & .checkbox-wrapper {
+    gap: 0.5em;
+    
+    &>:nth-child(1) {
+      flex: 1 0 20px;
+    }
+    &>:nth-child(2) {
+      flex: 0 0 24px;
+      height: 24px;
+    }
+  }
 }
 
-.multiplicative-grid-wrapper .row :nth-child(1) {
-  font-size: 1.25em;
-  flex: 2;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-.multiplicative-grid-wrapper .row :nth-child(2) {
-  font-size: 1.1em;
-  flex: 1.5;
-  display: flex;
-  text-align-last: left;
+.input-wrapper input {
+  min-width: 0;
+  width:100%;
 }
 
 .total {
-  background-color: hsl(170, 30%, 30%);
+  background-color: var(--bright);
 }
 
-@media (width <= 500px) {
-  .multiplicative-grid-wrapper .row {
+@media (width <=500px) {
+  .exp-source-wrapper .row {
     flex-direction: column;
   }
 }
