--- a/src/tooltip-component.css
+++ b/src/tooltip-component.css
@@ -10,21 +10,34 @@
 }
 
 .tooltip {
+  pointer-events: none;
   overflow-wrap: unset;
   position: absolute;
-  display: inline-block;
   width: auto;
   font-size: 1em;
-  /* top: top; Handled by TooptipComponent */
-  /* left: left; Handled by TooptipComponent */
-  /* opacity: show ? 1 : 0; Handled by TooptipComponent */
   transform: translateX(-50%);
-  background-color: black;
-  color: white;
+  background-color: var(--dark);
+  color: var(--text);
   border-radius: 4px;
+  border: 1px solid var(--bright);
   white-space: pre;
   padding: 1em;
   z-index: 10
+}
+
+.tooltip::before {
+  pointer-events: none;
+  content: "";
+  position: absolute;
+  bottom: -6px;
+  left: calc(50% - 5px);
+  transform: rotate(45deg);
+  background-color: var(--dark);
+  border: 1px solid var(--bright);
+  border-top: none;
+  border-left: none;
+  padding: 5px;
+  z-index: 12;
 }
 
 input {
