--- a/src/exp-sources-component.css
+++ b/src/exp-sources-component.css
@@ -1,16 +1,9 @@
-#root {
-  max-width: 700px;
-  margin: 0;
-  padding: 2rem;
-  text-align: center;
-  flex: 1;
-}
-
 .exp-source-wrapper {
   background-color: var(--normal);
   color: var(--text);
   width: 100%;
   padding-bottom: 1em;
+  border-radius: 5px 5px 0 0;
 }
 
 .exp-source-wrapper .row {
@@ -85,6 +78,7 @@
 
 .total {
   background-color: var(--bright);
+  border-radius: 0 0 5px 5px;
 }
 
 @media (width <=500px) {
